fixed small styling issues on smaller screens

--- a/src/components/Brief.astro
+++ b/src/components/Brief.astro
@@ -175,7 +175,16 @@ import Secure from '../assets/icons/lock.svg'
 
   @media (max-width:700px) {
     .brief-tab{
-        margin-left: 20px;
+        margin-left: 0;
+    }
+    .feature-grid{
+      padding:10px 0 12px;
+    }
+    .m-margin{
+      margin-bottom: 1rem;
+    }
+    .brief-media{
+      margin-top: 3.5rem;
     }
   }
 }
